--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,28 @@
 <!doctype html>
 <html>
     <head>
-        <title>1</title>
+        <title>Meadowlark Travel</title>
+        {{#if showTests}}
+                <link rel="stylesheet" href="/vendor/mocha.css">
+        {{/if}}
+
     </head>
     <body>
         {{body}}
+
+        {{#if showTests}}
+            <div id="mocha"></div>
+            <script src="/vendor/mocha.js"></script>
+            <script src="/vendor/chai.js"></script>
+            <script>
+                mocha.ui('tdd');
+                let assert = chai.assert;
+            </script>
+            <script src="/qa/tests-global.js"></script>
+            {{#if pageTestScript}}
+                <script src="{{pageTestScript}}"></script>
+            {{/if}}
+            <script>mocha.run()</script>
+        {{/if}}
     </body>
 </html>
