模板引擎的使用 7.4.6

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,9 @@
         {{#if showTests}}
                 <link rel="stylesheet" href="/vendor/mocha.css">
         {{/if}}
-
     </head>
     <body>
-        {{body}}
+    {{{body}}}
 
         {{#if showTests}}
             <div id="mocha"></div>
