--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,11 @@
 <h1>Welcome Home Page</h1>
+<form action="/api/testpost" method="POST">
+    <div>
+        name: <input type="text" name="name">
+    </div>
+    <div>
+        pass: <input type="text" name="pass">
+    </div>
+    <button type="submit">up</button>
+</form>
 {{> buzz}}
